[fix] result url wrap - closes #652

--- a/searx/static/themes/oscar/less/logicodev/results.less
+++ b/searx/static/themes/oscar/less/logicodev/results.less
@@ -148,3 +148,7 @@
     color: @gray;
     background: transparent;
 }
+
+.result .text-muted small {
+    word-wrap: break-word;
+}
