--- a/searx/static/themes/oscar/less/pointhi/results.less
+++ b/searx/static/themes/oscar/less/pointhi/results.less
@@ -81,3 +81,7 @@
     color: #AAA;
     background: #FFF;
 }
+
+.result .text-muted small {
+    word-wrap: break-word;
+}
